--- a/views/servicios.html
+++ b/views/servicios.html
@@ -22,6 +22,7 @@
 
 <body>
     <!-- Inicio de header -->
+    <header>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="row">
             <div class="logo__flex col-sm-12 my-1">
@@ -45,9 +46,11 @@
             <div class="carrito"><i class="bi bi-cart4"></i></div>
         </div>
     </nav>
-    <header class="container-fluid">
+    <div class="container-fluid">
+    
         <h1 class="text-center mt-4">Canario Pet Shop</h1>
         <h2 class="text-center">Tienda para mascotas</h2>
+    </div>
     </header>
     <!-- Fin de header -->
     <main>
@@ -111,16 +114,19 @@
                 <p><i class="bi bi-envelope">tiendaonline@canariopetshop.com</i></p>
             </div>
             <div>
-                <h4>Redes Sociales</h4>
+                <h3>Redes Sociales</h3>
                 <ul class="mt-4 list unstyled">
                     <li class="list-inline-item">
-                        <p><i class="fab fa-facebook-f"></i></p>
+                        <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                        
                     </li>
                     <li class="list-inline-item">
-                        <p><i class="fab fa-instagram"></i></p>
+                        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                        
                     </li>
                     <li class="list-inline-item">
-                        <p><i class="fab fa-twitter"></i></p> 
+                        <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+                        
                     </li>
                 </ul>
             </div>
