--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,155 +7,13 @@
 /* inicio mixin flex contacto */
 /* fin mixin flex contacto */
 /* inicio mixin footer_flex vista mobile */
-/*inicio main de nosotros */
-.gridPadre {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 70px 70px;
-  grid-template-areas: "titulo titulo" "texto imagen";
-  justify-items: left; }
-
-.animacion_titulos {
-  grid-area: titulo; }
-  .animacion_titulos .tit {
-    text-align: left;
-    padding: 1rem; }
-
-.text_nosotros {
-  grid-area: texto;
-  margin: 1cm;
-  height: 1cm;
-  padding-bottom: 100px;
-  padding-top: 10px; }
-
-.gridPadre img {
-  grid-area: imagen;
-  width: 600px;
-  padding-bottom: 200px; }
-
-/* fin main de nosotros */
-/* inicio  @media nosotros */
-@media only screen and (max-width: 420px) {
-  .gridPadre {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 120px;
-    grid-template-areas: "titulo" "imagen" "texto";
-    justify-items: center; }
-  h2 {
-    grid-area: titulo;
-    text-align: center;
-    padding-bottom: 100px;
-    height: 1px; }
-  .text_nosotros {
-    grid-area: texto;
-    margin: 1cm;
-    height: 1cm;
-    padding-bottom: 600px;
-    padding-top: 10px;
-    text-align: center; }
-  .gridPadre img {
-    grid-area: imagen;
-    width: 350px;
-    padding-bottom: 1px; } }
-
-.tit_alimentos, .tit_accesorios {
-  color: black;
-  padding: 50px;
-  border: 120px;
-  padding-bottom: 1px; }
-
-.tit_cuchas {
-  padding: 50px;
-  border: 120px;
-  padding-bottom: 1px; }
-
-.alimentos_flex, .accesorios_flex {
-  display: flex;
-  align-content: flex-start;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: row; }
-  .alimentos_flex img:hover, .accesorios_flex img:hover {
-    transform: scale(2, 2); }
-
-.cuchas_flex {
-  display: flex;
-  align-content: flex-start;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: row;
-  padding-bottom: 200px; }
-  .cuchas_flex img:hover {
-    transform: scale(2, 2); }
-
-/* fin productos */
-.gridpadre_servicios {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: repeat(1, 1fr);
-  gap: 20px;
-  justify-items: stretch;
-  align-content: space-between;
-  justify-content: space-between;
-  align-items: stretch; }
-
-.peluqueria {
-  grid-area: 1 / 1 / 2 / 2;
-  padding: 30px;
-  border: 20px;
-  padding-bottom: 1px; }
-
-.imgpeluqueria {
-  grid-area: 1 / 2 / 2 / 3;
-  border: 20px;
-  padding: 30px;
-  padding-bottom: 1px; }
-
-.veterinaria {
-  grid-area: 2 / 1 / 3 / 2;
-  padding: 30px;
-  border: 20px;
-  padding-bottom: 300px;
-  padding-top: 10px; }
-
-.imgveterinaria {
-  grid-area: 2 / 2 / 3 / 3;
-  padding-bottom: 300px;
-  padding-top: 10px;
-  padding: 30px;
-  border: 20px; }
-
-/* inicio @media servicios */
-.gradiente {
-  background-image: linear-gradient(#20200f, #d6db36); }
-
-/* fin @media servicios */
-.fondocontacto {
-  background-image: url(../assets/imag/contacto.jpg);
-  height: 900px; }
-
-.form-group {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-content: flex-end;
-  align-items: flex-end;
-  justify-content: space-around;
-  margin: 5cm;
-  height: 5cm;
-  font-size: 1.2rem;
-  color: white;
-  padding: 2cm;
-  padding-bottom: 650px; }
-
 * {
   margin: 0;
   padding: 0;
   text-decoration: none; }
 
 body {
-  background-color: #f6f676; }
+  background-color: #faea65; }
 
 /* inicio header canario */
 header {
@@ -180,11 +38,14 @@ header img {
   width: 100px;
   margin: 0 0 0 20px; }
 
+.carousel-inner {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  height: 520px; }
+
 /* fin header canario */
 /* inicio portada index */
-.carousel-inner {
-  height: 700px; }
-
 /* mixin portada */
 .contenedor__flex {
   display: flex;
@@ -223,10 +84,9 @@ main .portadaText {
   background-color: #f6f676;
   font-size: medium;
   padding-top: 30px;
-  height: 0%;
-  padding-bottom: 200px; }
+  padding-bottom: 30px; }
   main .portadaText p {
-    margin: 20px;
+    margin: 10px;
     padding: 5px;
     border: 15px; }
 
@@ -234,19 +94,19 @@ main .portadaText {
 /* extend animacion titulos */
 .animacion_titulos {
   text-align: left;
-  padding: 1cm;
-  height: 1cm; }
+  padding: 20px;
+  height: 1px;
+  border: 5px; }
 
 /* extend animacion titulos */
 /* inicio de footer */
 footer {
   color: white;
-  line-height: 15px;
   background-image: url("../assets/imag/gray.jpg");
   background-color: grey;
   background-repeat: no-repeat;
   background-size: cover;
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%; }
   footer ul li {
@@ -263,7 +123,10 @@ footer {
 .footer__flex {
   display: flex;
   justify-content: space-around;
-  font-size: 0.8rem;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  align-items: flex-start;
   font-size: 0.8rem; }
 
 .footer__creditos {
@@ -271,3 +134,530 @@ footer {
   text-align: center; }
 
 /* fin de footer */
+.gridPadre {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 70px 450px;
+  grid-template-areas: "titulo titulo" "texto imagen";
+  justify-items: left; }
+
+.animacion_titulos {
+  grid-area: titulo; }
+  .animacion_titulos .tit {
+    text-align: left;
+    padding: 1rem; }
+
+.text_nosotros {
+  grid-area: texto;
+  margin: 10px;
+  height: 10px;
+  padding-bottom: 100px; }
+
+.gridPadre img {
+  grid-area: imagen;
+  width: 600px;
+  padding-bottom: 200px; }
+
+.tit_alimentos, .tit_accesorios {
+  color: black;
+  padding: 50px;
+  border: 120px;
+  padding-bottom: 1px; }
+
+.tit_cuchas {
+  padding: 50px;
+  border: 120px;
+  padding-bottom: 1px; }
+
+.alimentos_flex, .accesorios_flex {
+  display: flex;
+  align-content: flex-start;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row; }
+  .alimentos_flex img:hover, .accesorios_flex img:hover {
+    transform: scale(1, 1); }
+
+.cuchas_flex {
+  display: flex;
+  align-content: flex-start;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  padding-bottom: 200px; }
+  .cuchas_flex img:hover {
+    transform: scale(2, 2); }
+
+/* fin productos */
+.gridpadre_servicios {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  justify-items: stretch;
+  align-content: space-between;
+  justify-content: space-between;
+  align-items: stretch;
+  padding: 20px;
+  gap: 30px; }
+
+.peluqueria {
+  grid-area: 1 / 1 / 2 / 2;
+  padding: 30px;
+  padding-bottom: 10px; }
+
+.imgpeluqueria {
+  grid-area: 1 / 2 / 2 / 3;
+  border: 20px;
+  padding: 30px;
+  padding-bottom: 10px; }
+
+.veterinaria {
+  grid-area: 2 / 1 / 3 / 2;
+  padding: 30px;
+  border: 20px;
+  padding-bottom: 750px;
+  padding-top: 10px;
+  height: 10px; }
+
+.imgveterinaria {
+  grid-area: 2 / 2 / 3 / 3;
+  padding-top: 10px;
+  height: 500px;
+  padding-left: 20px; }
+
+.fondocontacto {
+  background-image: url(../assets/imag/contacto.jpg);
+  background-color: #faea65;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 900px; }
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  align-items: center;
+  justify-content: space-around;
+  margin: 20rem;
+  height: 10rem;
+  font-size: 1.2rem;
+  color: white;
+  padding: 2px;
+  padding-bottom: 650px; }
+
+/* inicio vista tablet */
+/* inicio vista tablet index */
+@media only screen and (min-width: 421px) and (max-width: 960px) {
+  header h1 {
+    font-family: 'Nanum Pen Script', cursive;
+    color: #eeee1b;
+    font-size: 40px;
+    padding-top: 0%; }
+  header h2 {
+    padding-bottom: 50px;
+    height: 1px; }
+  header img {
+    height: 50px;
+    width: 70px;
+    margin: 0 0 0 20px; }
+  .carousel-inner {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    height: 270px; }
+  .tituloportada, .animacion_titulos {
+    text-align: center;
+    color: grey;
+    font-size: 30px;
+    /* nombre */
+    animation-name: efecto;
+    /* veces que se ejecuta */
+    animation-iteration-count: infinite;
+    /* duracion */
+    animation-duration: 4s;
+    /* tiempo que demora hasta que carga */
+    animation-delay: 1s; }
+  @keyframes efecto {
+    0% {
+      color: gray; }
+    50% {
+      color: white; }
+    75% {
+      color: black; }
+    100% {
+      color: gray; } }
+  .animacion_titulos {
+    text-align: center;
+    padding: 1px;
+    height: 1px;
+    color: grey;
+    font-size: 40px;
+    /* nombre */
+    animation-name: efecto;
+    /* veces que se ejecuta */
+    animation-iteration-count: infinite;
+    /* duracion */
+    animation-duration: 4s;
+    /* tiempo que demora hasta que carga */
+    animation-delay: 1s; }
+  @keyframes efecto {
+    0% {
+      color: gray; }
+    50% {
+      color: white; }
+    75% {
+      color: black; }
+    100% {
+      color: gray; } }
+  .footer__flex {
+    display: flex;
+    justify-content: center;
+    font-size: 0.8rem;
+    flex-direction: column;
+    align-content: flex-start;
+    align-items: flex-start; }
+  /* fin vista tablet index */
+  /* inicio vista tablet nosotros */
+  .gridPadre {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 100px;
+    grid-template-areas: "titulo" "imagen" "texto";
+    justify-items: center; }
+  h2 {
+    grid-area: titulo;
+    text-align: center;
+    padding-bottom: 100px;
+    height: 1px;
+    font-size: 30px; }
+  .text_nosotros {
+    grid-area: texto;
+    margin: 1cm;
+    height: 1cm;
+    padding-bottom: 500px;
+    padding-top: 10px;
+    text-align: center; }
+    .text_nosotros p {
+      font-size: 18px; }
+  .gridPadre img {
+    grid-area: imagen;
+    width: 350px;
+    padding-bottom: 1px; }
+  /* fin vista tablet nosotros */
+  /* inicio vista tablet productos */
+  .alimentos_flex, .accesorios_flex {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    padding: 1px; }
+  .accesorios_flex {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    padding: 1px; }
+  .cuchas_flex {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    padding-bottom: 200px;
+    flex-wrap: nowrap;
+    padding: 20px; }
+  /* fin vista tablet productos */
+  /* inicio vista tablet servicios */
+  .gridpadre_servicios {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    justify-items: stretch;
+    align-content: space-between;
+    justify-content: space-between;
+    align-items: stretch;
+    padding: 2px;
+    margin: 3px;
+    height: 1900px;
+    gap: 20px; }
+  .peluqueria {
+    grid-area: 1 / 1 / 2 / 2;
+    width: 490px;
+    text-align: left;
+    font-size: 18px; }
+  .imgpeluqueria {
+    grid-area: 2 / 1 / 3 / 2;
+    padding-top: 0px;
+    height: 350px;
+    margin: 1px; }
+  .peluqueria {
+    grid-area: 1 / 1 / 2 / 2;
+    width: 350px;
+    height: 400px;
+    text-align: left;
+    font-size: 18px; }
+  .imgpeluqueria {
+    grid-area: 2 / 1 / 3 / 2;
+    padding-top: 0px;
+    height: 330px; }
+  .gridpadre_servicios img {
+    width: 330px;
+    height: 320px; }
+  .veterinaria {
+    grid-area: 3 / 1 / 4 / 2;
+    padding: 10px;
+    width: 350px;
+    text-align: left;
+    font-size: 18px;
+    margin: 10px;
+    height: 600px; }
+  .imgveterinaria {
+    grid-area: 4 / 1 / 5 / 2;
+    width: 360px;
+    height: 400px;
+    margin-left: 40px; }
+  /* fin vista tablet servicios */
+  /* inicio vista tablet contacto */
+  .fondocontacto {
+    background-color: #faea65;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 700px; }
+  .form-group {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem;
+    color: white;
+    padding: 30px;
+    padding-bottom: 900px;
+    margin: 10px;
+    padding-top: 300px; }
+  .mb-1 {
+    margin-bottom: .25rem !important;
+    width: 300px; }
+  /* fin vista tablet contacto */ }
+
+/* fin vista tablet */
+/* inicio vista mobile */
+/* inicio vista mobile index */
+@media only screen and (max-width: 420px) {
+  header h1 {
+    font-family: 'Nanum Pen Script', cursive;
+    color: #eeee1b;
+    font-size: 50px;
+    padding-top: 0%; }
+  header h2 {
+    padding-bottom: 50px;
+    height: 1px; }
+  .carrito {
+    font-size: 200%; }
+  header img {
+    height: 70px;
+    width: 100px;
+    margin: 0 0 0 5px; }
+  .carousel-inner {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    height: 220px; }
+  .contenedor__flex {
+    display: flex;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; }
+  .tituloportada, .animacion_titulos {
+    text-align: center;
+    color: grey;
+    font-size: 30px;
+    /* nombre */
+    animation-name: efecto;
+    /* veces que se ejecuta */
+    animation-iteration-count: infinite;
+    /* duracion */
+    animation-duration: 4s;
+    /* tiempo que demora hasta que carga */
+    animation-delay: 1s; }
+  @keyframes efecto {
+    0% {
+      color: gray; }
+    50% {
+      color: white; }
+    75% {
+      color: black; }
+    100% {
+      color: gray; } }
+  main .portadaText {
+    text-align: center;
+    background-color: #f6f676;
+    font-size: medium;
+    padding-top: 10px; }
+    main .portadaText p {
+      margin: 10px;
+      padding: 2px;
+      border: 10px; }
+  .animacion_titulos {
+    text-align: center;
+    padding: 1px;
+    height: 1px;
+    color: grey;
+    font-size: 30px;
+    /* nombre */
+    animation-name: efecto;
+    /* veces que se ejecuta */
+    animation-iteration-count: infinite;
+    /* duracion */
+    animation-duration: 4s;
+    /* tiempo que demora hasta que carga */
+    animation-delay: 1s; }
+  @keyframes efecto {
+    0% {
+      color: gray; }
+    50% {
+      color: white; }
+    75% {
+      color: black; }
+    100% {
+      color: gray; } }
+  .footer__flex {
+    display: flex;
+    justify-content: center;
+    font-size: 0.8rem;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    align-items: flex-start;
+    position: relative; }
+  /* fin vista mobile index */
+  /* inicio vista mobile nosotros */
+  .gridPadre {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 100px;
+    grid-template-areas: "titulo" "imagen" "texto";
+    justify-items: center; }
+  h2 {
+    grid-area: titulo;
+    text-align: center;
+    padding-bottom: 100px;
+    height: 1px; }
+  .text_nosotros {
+    grid-area: texto;
+    margin: 1cm;
+    height: 1cm;
+    padding-bottom: 400px;
+    padding-top: 10px;
+    text-align: center; }
+  .gridPadre img {
+    grid-area: imagen;
+    width: 350px;
+    padding-bottom: 1px; }
+  /* fin vista mobile nosotros */
+  /* inicio vista mobile productos*/
+  .alimentos_flex, .accesorios_flex {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    padding: 1px; }
+  .accesorios_flex {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    padding: 1px; }
+  .cuchas_flex {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    padding: 1px;
+    padding: 20px; }
+  /* fin vista mobile productos */
+  /* inicio vista mobile servicios */
+  .gridpadre_servicios {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    justify-items: stretch;
+    align-content: space-between;
+    justify-content: space-between;
+    align-items: stretch;
+    padding: 2px;
+    margin: 5px;
+    height: 1900px; }
+  .peluqueria {
+    grid-area: 1 / 1 / 2 / 2;
+    width: 350px;
+    height: 450px;
+    text-align: left;
+    font-size: 18px; }
+  .imgpeluqueria {
+    grid-area: 2 / 1 / 3 / 2;
+    padding-top: 0px;
+    height: 330px; }
+  .peluqueria {
+    grid-area: 1 / 1 / 2 / 2;
+    width: 350px;
+    height: 450px;
+    text-align: left;
+    font-size: 18px; }
+  .imgpeluqueria {
+    grid-area: 2 / 1 / 3 / 2;
+    padding-top: 0px;
+    height: 330px; }
+  .gridpadre_servicios img {
+    width: 330px;
+    height: 320px; }
+  .veterinaria {
+    grid-area: 3 / 1 / 4 / 2;
+    padding: 10px;
+    width: 350px;
+    text-align: left;
+    font-size: 18px;
+    margin: 10px;
+    height: 600px; }
+  .imgveterinaria {
+    grid-area: 4 / 1 / 5 / 2;
+    width: 360px;
+    height: 400px; }
+  /* fin vista mobile servicios */
+  /* inicio vista mobile contacto */
+  .fondocontacto {
+    background-color: #faea65;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 700px; }
+  .form-group {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem;
+    color: white;
+    padding: 30px;
+    padding-bottom: 900px;
+    margin: 10px;
+    padding-top: 300px; }
+  .mb-1 {
+    margin-bottom: .25rem !important;
+    width: 300px; }
+  /* fin vista mobile contacto */ }
+
+/* fin vista mobile */
