--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -1,8 +1,7 @@
-/*inicio main de nosotros */
 .gridPadre {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 70px 70px;
+    grid-template-rows: 70px 450px;
     grid-template-areas:
         "titulo titulo"
         "texto imagen";
@@ -22,55 +21,14 @@
 
 .text_nosotros {
     grid-area: texto;
-    margin: 1cm;
-    height: 1cm;
+    margin: 10px;
+    height: 10px;
     padding-bottom: 100px;
-    padding-top: 10px;
+
 }
 
 .gridPadre img {
     grid-area: imagen;
     width: 600px;
     padding-bottom: 200px;
-}
-
-
-
-/* fin main de nosotros */
-/* inicio  @media nosotros */
-@media only screen and (max-width: 420px) {
-
-    .gridPadre {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 120px;
-        grid-template-areas:
-            "titulo"
-            "imagen"
-            "texto";
-        justify-items: center;
-
-    }
-
-    h2 {
-        grid-area: titulo;
-        text-align: center;
-        padding-bottom: 100px;
-        height: 1px;
-    }
-
-    .text_nosotros {
-        grid-area: texto;
-        margin: 1cm;
-        height: 1cm;
-        padding-bottom: 600px;
-        padding-top: 10px;
-        text-align: center;
-    }
-
-    .gridPadre img {
-        grid-area: imagen;
-        width: 350px;
-        padding-bottom: 1px;
-    }
 }
