--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -2,19 +2,19 @@
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(1, 1fr);
-    gap: 20px;
     justify-items: stretch;
     align-content: space-between;
     justify-content: space-between;
     align-items: stretch;
+    padding: 20px;
+    gap: 30px;
 
 }
 
 .peluqueria {
     grid-area: 1 / 1 / 2 / 2;
     padding: 30px;
-    border: 20px;
-    padding-bottom: 1px;
+    padding-bottom: 10px;
 
 }
 
@@ -22,7 +22,7 @@
     grid-area: 1 / 2 / 2 / 3;
     border: 20px;
     padding: 30px;
-    padding-bottom: 1px;
+    padding-bottom: 10px;
 
 
 }
@@ -31,23 +31,15 @@
     grid-area: 2 / 1 / 3 / 2;
     padding: 30px;
     border: 20px;
-    padding-bottom: 300px;
+    padding-bottom: 750px;
     padding-top: 10px;
+    height: 10px;
 
 }
 
 .imgveterinaria {
     grid-area: 2 / 2 / 3 / 3;
-    padding-bottom: 300px;
     padding-top: 10px;
-    padding: 30px;
-    border: 20px;
-
+    height: 500px;
+    padding-left: 20px;
 }
-
-/* inicio @media servicios */
-.gradiente {
-    background-image: linear-gradient(rgb(32, 32, 15), rgb(214, 219, 54));
-}
-
-/* fin @media servicios */
