--- a/views/contacto.html
+++ b/views/contacto.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=C, initial-scale=1.0">
     <meta name="keywords" content="petshop cordoba,mascotas, alimentos para mascotas">
-    <meta name="description" content="Te esperamos en Av. La Cordillera 3946 o comunicate a nuestro wsp +5493513845741.">
+    <meta name="description"
+        content="Te esperamos en Av. La Cordillera 3946 o comunicate a nuestro wsp +5493513845741.">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="shortcut icon" href="../assets/imag/logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -22,32 +23,36 @@
 
 <body>
     <!-- Inicio de header -->
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="row">
-            <div class="logo__flex col-sm-12 my-1">
-                <a href="../index.html"><img src="../assets/imag/logo1.jpeg" alt=logo></a>
-            </div>
-        </div>
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="navbar-brand" href="../index.html">INICIO</a>
-                    <a class="nav-link" aria-current="page" href="../views/nosotros.html">NOSOTROS</a>
-                    <a class="nav-link" href="../views/productos.html">PRODUCTOS</a>
-                    <a class="nav-link" href="../views/servicios.html">SERVICIOS</a>
-                    <a class="nav-link" href="../views/contacto.html">CONTACTO</a>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="row">
+                <div class="logo__flex col-sm-12 my-1">
+                    <a href="../index.html"><img src="../assets/imag/logo1.jpeg" alt=logo></a>
                 </div>
             </div>
-            <div class="carrito"><i class="bi bi-cart4"></i></div>
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="navbar-brand" href="../index.html">INICIO</a>
+                        <a class="nav-link" aria-current="page" href="../views/nosotros.html">NOSOTROS</a>
+                        <a class="nav-link" href="../views/productos.html">PRODUCTOS</a>
+                        <a class="nav-link" href="../views/servicios.html">SERVICIOS</a>
+                        <a class="nav-link" href="../views/contacto.html">CONTACTO</a>
+                    </div>
+                </div>
+                <div class="carrito"><i class="bi bi-cart4"></i></div>
+            </div>
+        </nav>
+        <div class="container-fluid">
+
+            <h1 class="text-center  mt-4">Canario Pet Shop</h1>
+            <h2 class="text-center">Tienda para mascotas</h2>
         </div>
-    </nav>
-    <header class="container-fluid">
-        <h1 class="text-center  mt-4">Canario Pet Shop</h1>
-        <h2 class="text-center">Tienda para mascotas</h2>
     </header>
     <!-- Fin de header -->
     <!-- Inicio de main -->
@@ -58,16 +63,16 @@
             </div>
             <form role="form_flex">
                 <div class="form-group">
-                    <div class="mb-1 col-md-6">
+                    <div class="mb-1 col-md-10">
                         <label for="exampleFormControlInput1" class="form-label">Nombre</label>
                         <input type="nombre" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
                         <label for="exampleFormControlInput1" class="form-label">Apellido</label>
                         <input type="e-mail" class="form-control" id="exampleFormControlInput1" placeholder="Apellido">
                         <label for="exampleFormControlInput1" class="form-label">E-mail</label>
                         <input type="e-mail" class="form-control" id="exampleFormControlInput1" placeholder="E-mail">
-                    
+
                     </div>
-                    <div class="mb-4 col-md-6">
+                    <div class="mb-1 col-md-10">
                         <label for="exampleFormControlTextarea1" class="form-label">Dejanos tu mensaje</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
                         <button type="button" class="btn btn-dark">Enviar</button>
@@ -88,16 +93,19 @@
                 <p><i class="bi bi-envelope">tiendaonline@canariopetshop.com</i></p>
             </div>
             <div>
-                <h4>Redes Sociales</h4>
+                <h3>Redes Sociales</h3>
                 <ul class="mt-4 list unstyled">
                     <li class="list-inline-item">
-                        <p><i class="fab fa-facebook-f"></i></p>
+                        <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+
                     </li>
                     <li class="list-inline-item">
-                        <p><i class="fab fa-instagram"></i></p>
+                        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+
                     </li>
                     <li class="list-inline-item">
-                        <p><i class="fab fa-twitter"></i></p>
+                        <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+
                     </li>
                 </ul>
             </div>
